# daphne

crates/dapf/src/: main.rs
crates/daphne-server/examples/: configuration-helper.toml  configuration-leader.toml
crates/daphne-server/src/roles/: leader.rs
crates/daphne-server/src/router/: test_routes.rs
crates/daphne/src/roles/leader/: in_memory_leader.rs  mod.rs
crates/generate-task/: Cargo.toml
crates/generate-task/src/: main.rs
interop-divviup/: README.md  helper_task.json  hpke_collector_config.json  index.js  leader_task.json  package.json  query.json  reset.sh  test.sh
