[package]
name = "generate-task"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
daphne = { path = "../daphne", default-features = false }
prio.workspace = true
rand.workspace = true
serde_json.workspace = true

[lints]
workspace = true
